--- a/datavault-frontend/.streamlit/config.toml
+++ b/datavault-frontend/.streamlit/config.toml
@@ -7,4 +7,7 @@ enableXsrfProtection = true
 primaryColor = "#4A90E2"
 backgroundColor = "#F8F9FA"
 secondaryBackgroundColor = "#FFFFFF"
-textColor = "#2C3E50" 
+textColor = "#2C3E50"
+
+[browser]
+gatherUsageStats = false 
