--- a/datavault-frontend/requirements.txt
+++ b/datavault-frontend/requirements.txt
@@ -6,3 +6,6 @@ python-dotenv==1.0.1
 supabase==1.0.3
 extra-streamlit-components==0.1.60
 plotly==5.18.0
+chardet==5.2.0
+openpyxl==3.1.2
+xlrd==2.0.1
